--- a/client/src/index.css
+++ b/client/src/index.css
@@ -109,10 +109,17 @@ tbody tr:nth-child(odd) {
   color: whitesmoke;
 }
 
+.nav-container {
+
+  display: flex;
+  flex-direction: row;
+}
+
 .nav-item {
   display: block;
   margin-left: auto;
   list-style: none;
+  margin: 0 10px 0 10px;
 }
 
 .nav-item button {
